objects/AMC_Plan__c.object
<CustomObject>
    <label>AMC Plan</label>
    <nameField>
        <label>Name of AMC Plan</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AMC Plan</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>GST__c</fullName>
        <label>GST (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Offline (Onsite)</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Test value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <formula>Price__c + (Price__c * GST__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visits__c</fullName>
        <label>Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Days__c</fullName>
        <label>Custom Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_days__c</fullName>
        <formula>IF(TEXT(Period__c ) = &quot;Annual&quot;, 365, IF(TEXT(Period__c ) = &quot;Half Yearly&quot;, 180, IF(TEXT(Period__c ) = &quot;Quarterly&quot;, 90, 0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period days</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>AMC Plan</relationshipLabel>
        <relationshipName>AMC_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account  Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AMC Plan</relationshipLabel>
        <relationshipName>AMC_Plan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Hours__c</fullName>
        <label>Training Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_of_Maintenance__c</fullName>
        <label>Hours of Maintenance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_on_Existing_AMC_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update on Existing AMC&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coverage_Terms_GUI_Enabled__c</fullName>
        <label>Coverage / Terms</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Installations_Re_installations__c</fullName>
        <label>Installations / Re-installations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>